# sff2fastq

./: CMakeLists.txt  PackageInfo.cmake
debian/: postinst.in  prerm.in
gmt-web/: common.yml
gmt-web/content/: documentation.md  index.md  install.md
src/: CMakeLists.txt  main.c
